# clippy-picker

./: .gitignore  README.md  pyrightconfig.json  run.sh
arduino/delta_robot_controller/: delta_robot_controller.ino
docs/: how-it-works.md
firmware/: platformio.ini  secrets.ini.example
firmware/include/: config.h  gripper.h  motors.h  protocol.h
firmware/src/: gripper.cpp  main.cpp  motors.cpp  protocol.cpp
firmware/test_scripts/: endstop_test.cpp  gripper_raw_test.cpp  gripper_test.cpp  sts3215_test.cpp  wifi_test.cpp
python/: .env.example  camera.py  coordinates.py  delta_home.json  delta_kinematics.py  delta_robot.py  dynamixel_arm.py  factory_edge.py  homing.py  object_detection.py  pick.py  preflight.py  pyproject.toml  requirements.txt  transforms.py  web_controller.py
python/calibration/: camera_transform.json  kabsch.py
python/calibration/extrinsic/: camera_transform.json  kabsch.py
python/calibration/intrinsic/: calibrate_stereo.py
python/mmlove-camera/: calibrate_stereo.py  depth_preview.py  test_stereo.py
python/scripts/: calibration.py  capture_training_images.py  depth_preview.py  feetech_test.py  pointcloud_preview.py  realsense_camera.py  test_pick.py  test_stereo.py  train_yolo.py  workspace_analysis.py
python/templates/: _calibration_sidebar.html  _homing_modal.html  calibration.html  cartesian.html  homing.html  index.html
