[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "ftservo-python-sdk>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.5.0",
    "paho-mqtt>=2.1",
    "pydantic>=2.0",
    "pyserial>=3.5",
    "requests>=2.31",
    "ultralytics>=8.3.0",
]
